--- a/about.html
+++ b/about.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>This is about section</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis voluptatem veniam totam sapiente ullam autem aspernatur dolorem eos, repellendus iusto optio pariatur asperiores quas iure blanditiis reprehenderit saepe repellat assumenda obcaecati excepturi? Modi eos corporis obcaecati nisi quisquam, quia nobis hic repudiandae quibusdam. Aut officia saepe ducimus impedit non natus?</p>
 </body>
 </html>
