--- a/contact.html
+++ b/contact.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>This is Contact us page </h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error corporis deserunt quaerat voluptatum a corrupti fugiat aspernatur illum cumque! Aspernatur deserunt rem laboriosam corporis quos vel reiciendis praesentium pariatur id asperiores, aut magni sed! Obcaecati magni aliquid sit. Aut voluptates illum repellendus quam aliquam, vel at quidem sunt sit alias.</p>
 </body>
 </html>
